fix: flexitem spacing on RTL

--- a/styles/web/sass/resources/atlas_resources_default/buildingblocks/_alignment-block.scss
+++ b/styles/web/sass/resources/atlas_resources_default/buildingblocks/_alignment-block.scss
@@ -22,3 +22,10 @@
 .flex-center {
     align-items: center;
 }
+
+[dir='rtl'] {
+    .flexcontainer .flexitem {
+        margin-right: 0;
+        margin-left: $gutter-size;
+    }
+}
